crates/myso/src/client_ptb/snapshots/myso__client_ptb__lexer__tests__unexpected_random_chars.snap
---
source: crates/myso/src/client_ptb/lexer.rs
expression: tokens
---
[
    Spanned {
        span: Span {
            start: 0,
            end: 1,
        },
        value: Lexeme(
            Number,
            "4",
        ),
    },
    Spanned {
        span: Span {
            start: 2,
            end: 3,
        },
        value: Lexeme(
            Unexpected,
            "*",
        ),
    },
]
